dpkg (1.18.3) UNRELEASED; urgency=low

  [ Updated programs translations ]
  * Catalan (Jordi Mallach).

 -- Guillem Jover <guillem@debian.org>  Wed, 05 Aug 2015 03:10:02 +0200

dpkg (1.18.2) unstable; urgency=low

  [ Guillem Jover ]
  * Fix plural form translations for single plural languages. Closes: #790025
  * Add new dpkg-buildpackage -J option, which is a safe version of -j.
  * Fix dpkg-gencontrol to add correct binary filename to debian/files,
    even when overriding the Package field value with the -D option.
    Reported by Niels Thykier <niels@thykier.net>.
  * Move the implicit build-essential:native Build-Depends from
    dpkg-checkbuilddeps to a new vendor hook, as it is Debian-specific.
  * Add support for ignoring built-in build dependencies and conflicts
    with the new «dpkg-buildpackage --ignore-builtin-builddeps» and
    «dpkg-checkbuilddeps -I» options. Closes: #480638, #571671
  * When sys_siglist is defined in the system, try to use NSIG as we cannot
    compute the array size with sizeof(). If NSIG is missing fallback to 32
    items. Prompted by Igor Pashev <pashev.igor@gmail.com>.
  * Use string_to_security_class() instead of a literal SECCLASS value in
    the setexecfilecon() libcompat function, as <selinux/flask.h> is now
    deprecated.
  * Switch libdpkg xz compressor to use CRC64 for integrity checks, to match
    the default on the command-line tool, which should provide slightly better
    detection against damaged data, at a negligible speed difference.
  * Only use the SHELL environment variable for interactive shells.
    Closes: #788819
  * Move tar option --no-recursion before -T in dpkg-deb. With tar > 1.28 the
    --no-recursion option is now positional, and needs to be passed before
    the -T option, otherwise the tarball will end up with duplicated entries.
    Thanks to Richard Purdie <richard.purdie@linuxfoundation.org>.
  * Add an extra level of escaping for double $(evals) in architecture.mk