@@ -1,5 +1,11 @@
 dpkg (1.18.3) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Perl modules:
+    - Only warn on invalid week days instead of aborting in
+      Dpkg::Changelog::Entry::Debian. Regression introduced in dpkg 1.18.2.
+      Reported by Jakub Wilk <jwilk@debian.org>.
+
   [ Updated programs translations ]
   * Catalan (Jordi Mallach).
 
